--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id=Iv1.f5f3fc56181b7660
+github.client.secret=a4864b4f978e1931e26e60ee94bcc4494037ee75
+github.redirect.url=https://localhost:8080/callback
