集成Mybaits实现插入操作

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 github.client.id=323616610a80b997c718
 github.client.secret=1b606e5082dcf6a8fa67beb059bcdc313c4d3b17
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
